fixes a couple of lines of code that were not needed and a spacing issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -289,7 +289,7 @@ padding-top: 100px;
     z-index: 1;
 }
     
-    .header-buttons {
+.header-buttons {
     display: flex;
     justify-content: center;
     height: 42px;
@@ -421,8 +421,6 @@ a.home-page-button-text:hover {
     margin-top: 80px;
     background-color: #9a5caf;
 }
-
-.add-new-card:hover
 
 // Index Page
 .unprotected-index-page {
